--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
-    "autoprefixer": "^10.4.20",
+    "@tailwindcss/vite": "^4.1.7",
     "gsap": "^3.13.0",
-    "postcss": "^8.4.49",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^3.4.17",
     "three": "^0.176.0"
   },
   "devDependencies": {
@@ -27,10 +25,13 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.14.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "vite": "^6.3.5"
   }
 }
