--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-responsive": "^10.0.1",
+    "react-window": "^1.8.11",
     "three": "^0.176.0"
   },
   "devDependencies": {
