--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.7",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.15.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
